--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.5.1
 bs4==0.0.1
 click==6.6
 Flask==0.11.1
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 lxml==3.6.4
@@ -12,5 +13,6 @@ pandas==0.18.1
 python-dateutil==2.5.3
 pytz==2016.6.1
 requests==2.11.1
+requests-cache==0.4.12
 six==1.10.0
 Werkzeug==0.11.10
